# CloudClipboard

./: .gitignore  Dockerfile  README.md
.github/workflows/: build-server.yml  c.yml  ci.yml
client/: after-build.js
client/src/: App.vue
client/src/router/: index.js
server-c/: .gitignore  CMakeLists.txt  README.md
server-c/cmake/: zig.cmake
server-c/include/: data.h  mongoose.h  utils.h
server-c/src/: data.c  main.c  mongoose.c  utils.c
